Configured FOXUserBundle as per documentation

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -57,3 +57,8 @@ swiftmailer:
 jms_security_extra:
     secure_controllers:  true
     secure_all_services: false
+
+fos_user:
+    db_driver: mongodb # other valid values are 'orm', 'mongodb', 'couchdb'
+    firewall_name: main
+    user_class: AirOS\ControlCenterBundle\Document\User
